# romeo_text_detection

./: CMakeLists.txt  detect_read_text.cpp  qiproject.xml
